# CSCI_441_Spring_2020

./: .gitignore  README.md
labs/: README.md
labs/lab0/: CMakeLists.txt  README.md  main.cpp
labs/lab1/: CMakeLists.txt  README.md  main.cpp
labs/lab2/: CMakeLists.txt  README.md  frag.glsl  main.cpp  vert.glsl
labs/lab3/: CMakeLists.txt  README.md  frag.glsl  main.cpp  matrix3.h  vert.glsl
labs/lab4/: CMakeLists.txt  README.md  frag.glsl  main.cpp  matrix4.h  vector3.h  vert.glsl
labs/lab5/: CMakeLists.txt  README.md  frag.glsl  main.cpp  shape.h  vert.glsl
labs/lab6/: CMakeLists.txt  README.md  main.cpp  mesh.h  model.h  renderer.h  shape.h  triangle.h  vertex.h
labs/lab7/: frag.glsl  main.cpp  shape.h  vert.glsl
labs/lab8/: CMakeLists.txt  README.md  main.cpp
labs/lab8/lib/: camera.h  ray.h
labs/lab9/: CMakeLists.txt  README.md  camera.h  hit.h  main.cpp  renderer.h  shape.h  timings.xlsx
prog/prog01/: README.md
projs/: README.md
projs/proj1/: CMakeLists.txt  README.md  main.cpp
projs/proj1/description/: README.md
projs/proj1/lib/: camera.h  light.h  matrix4.h  model.h  renderer.h  uniform.h  vector4.h
projs/proj1/shaders/: frag.glsl  mazeFrag.glsl  vert.glsl
projs/proj1/textures/: Hedge.ase  Path.aseprite
projs/proj2/: CMakeLists.txt  README.md  main.cpp
projs/proj2/description/: README.md
projs/proj2/lib/: camera.h  hit.h  intersector.h  light.h  ray.h  renderer.h  shader.h  shape.h  timer.h  world.h
